--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <table cellspacing="20">
              <tbody> 
                 <tr>
-           <td> <img src="images/DSC_4801.jpg" alt="an image of a boy" width="300" height="300"> </td>
+           <td> <img src="DSC_4801.jpg" alt="an image of a boy" width="300" height="300"> </td>
            <td>
             <h1> OSAGIE OBAZEE OSAKPOLOR</h1> 
             <H2> <em> PHOTOGRAPHER AND RETOUCHER </em></H2>
