--- a/contact_me.html
+++ b/contact_me.html
@@ -46,7 +46,7 @@
     <button type=" submit">submit</button>
     <br>
     <a href="index.html">Home page</a>
-    <a href="Hobbies.html">Hobbies</a>
+    <a href="hobbies.html">Hobbies</a>
     </form>
 </body>
 </html>
